--- a/belframework-webservice-plugin/build.xml
+++ b/belframework-webservice-plugin/build.xml
@@ -31,10 +31,11 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
               value="belframework_webservice_source_${jar.version}.jar" />
     <property name="deploy.path"
               value="${CYTOSCAPE_HOME}/plugins/${jar.name}" />
+	<property name="bel.version" value="1.2.3" />
 
     <path id="classpath">
         <pathelement location="${CYTOSCAPE_HOME}/cytoscape.jar" />
-        <pathelement location="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-1.2.3.jar" />
+        <pathelement location="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar" />
     </path>
 
     <target name="clean">
