--- a/belframework-webservice-plugin/build.xml
+++ b/belframework-webservice-plugin/build.xml
@@ -68,7 +68,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         <jar destfile="${dist.path}/${jar.name}" basedir="${compile.path}">
             <fileset dir="${src.path}" includes="**/*.props" />
 
-            <zipfileset src="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-1.2.3.jar"
+            <zipfileset src="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar"
                         includes="**/*.java **/*.class" />
 
             <manifest>
