--- a/kam-navigator-plugin/build.xml
+++ b/kam-navigator-plugin/build.xml
@@ -34,6 +34,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
               value="kam_navigator_source_${jar.version}.jar" />
     <property name="deploy.path"
               value="${CYTOSCAPE_HOME}/plugins/${jar.name}" />
+    <property name="bel.version" value="1.2.3" />
 
     <path id="classpath">
         <fileset dir="${lib.path}">
@@ -73,7 +74,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         <jar destfile="${dist.path}/${jar.name}" basedir="${compile.path}">
             <fileset dir="${src.path}" includes="**/*.props" />
 
-            <zipfileset src="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-1.2.3.jar"
+            <zipfileset src="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar"
                         includes="**/*.java **/*.class" />
 
             <manifest>
