--- a/belframework-webservice-plugin/build.xml
+++ b/belframework-webservice-plugin/build.xml
@@ -32,10 +32,11 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <property name="deploy.path"
               value="${CYTOSCAPE_HOME}/plugins/${jar.name}" />
     <property name="bel.version" value="1.2.3" />
+    <property name="bel.jar.path" value="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar" />
 
     <path id="classpath">
         <pathelement location="${CYTOSCAPE_HOME}/cytoscape.jar" />
-        <pathelement location="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar" />
+        <pathelement location="${bel.jar.path}" />
     </path>
 
     <target name="clean">
@@ -68,7 +69,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         <jar destfile="${dist.path}/${jar.name}" basedir="${compile.path}">
             <fileset dir="${src.path}" includes="**/*.props" />
 
-            <zipfileset src="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar"
+            <zipfileset src="${bel.jar.path}"
                         includes="**/*.java **/*.class" />
 
             <manifest>
