--- a/kam-navigator-plugin/build.xml
+++ b/kam-navigator-plugin/build.xml
@@ -35,6 +35,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <property name="deploy.path"
               value="${CYTOSCAPE_HOME}/plugins/${jar.name}" />
     <property name="bel.version" value="1.2.3" />
+    <property name="bel.jar.path" value="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar" />
 
     <path id="classpath">
         <fileset dir="${lib.path}">
@@ -74,7 +75,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         <jar destfile="${dist.path}/${jar.name}" basedir="${compile.path}">
             <fileset dir="${src.path}" includes="**/*.props" />
 
-            <zipfileset src="${BELFRAMEWORK_HOME}/lib/webapiclient/BELFrameworkWebAPIClient-${bel.version}.jar"
+            <zipfileset src="${bel.jar.path}"
                         includes="**/*.java **/*.class" />
 
             <manifest>
