Moved BELFRAMEWORK_VERSION to the build.properties file.
My thinking is that this should be user facing without needing to edit the ant file.
Also changing the path is enough if you want to change versions.

--- a/belframework-webservice-plugin/build.properties
+++ b/belframework-webservice-plugin/build.properties
@@ -1,2 +1,4 @@
 BELFRAMEWORK_HOME=/path/to/belframework
 CYTOSCAPE_HOME=/path/to/cytoscape
+<!-- check documentation for supported versions -->
+BELFRAMEWORK_VERSION=1.2.3
