--- a/kam-navigator-plugin/build.properties
+++ b/kam-navigator-plugin/build.properties
@@ -1,2 +1,4 @@
 BELFRAMEWORK_HOME=/path/to/belframework
 CYTOSCAPE_HOME=/path/to/cytoscape
+<!-- check documentation for supported versions -->
+BELFRAMEWORK_VERSION=1.2.3
