Added back in the inclusion of the license in the jar files

--- a/belframework-webservice-plugin/build.xml
+++ b/belframework-webservice-plugin/build.xml
@@ -20,6 +20,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 <project name="belframework-webservice-plugin" default="deploy">
     <property file="build.properties" />
 
+	<property name="license" value="COPYING" />
     <property name="dist.path" value="dist" />
     <property name="src.path" value="src" />
     <property name="compile.path" value="bin" />
@@ -74,11 +75,16 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                 <attribute name="Cytoscape-Plugin"
                            value="org.openbel.belframework.webservice.ClientPlugin" />
             </manifest>
+        	
+            <!-- include license -->
+            <metainf file="${license}" />
         </jar>
     </target>
 
     <target name="package-source">
         <jar destfile="${dist.path}/${src.jar.name}" basedir="${src.path}">
+            <!-- include license -->
+            <metainf file="${license}" />
         </jar>
     </target>
 
