--- a/kam-navigator-plugin/build.xml
+++ b/kam-navigator-plugin/build.xml
@@ -28,7 +28,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <property name="src.path" value="src" />
     <property name="lib.path" value="lib" />
     <property name="compile.path" value="bin" />
-    <property name="jar.version" value="0.8" />
+    <property name="jar.version" value="0.9-SNAPSHOT" />
     <property name="jar.name" value="belframework_kam_navigator_${jar.version}.jar" />
     <property name="src.jar.name"
               value="belframework_kam_navigator_source_${jar.version}.jar" />
