--- a/belframework-webservice-plugin/build.xml
+++ b/belframework-webservice-plugin/build.xml
@@ -18,7 +18,7 @@ You should have received a copy of the GNU Lesser General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 -->
 <project name="belframework-webservice-plugin" default="deploy">
-    <property file="build.properties" />
+	<property file="../build.properties" />
 
 	<property name="license" value="COPYING" />
     <property name="dist.path" value="dist" />
