Renamed directories to match openbel scheme
kam-navigator-plugin -> org.openbel.cytoscape.navigator
belframework-webservice-plugin -> org.openbel.cytoscape.webservice

Updated build scripts and ignores to match new naming

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 .metadata
 RemoteSystemsTempFiles/
-belframework-webservice-plugin/.classpath
-belframework-webservice-plugin/.project
-belframework-webservice-plugin/bin/
-belframework-webservice-plugin/dist/
-kam-navigator-plugin/.settings
-kam-navigator-plugin/.classpath
-kam-navigator-plugin/.project
-kam-navigator-plugin/bin/
-kam-navigator-plugin/dist/
-kam-navigator-plugin/lib/
-belframework-webservice-plugin/nbproject/
-kam-navigator-plugin/nb-build.xml
-kam-navigator-plugin/nbproject/
-belframework-webservice-plugin/nb-build.xml
+org.openbel.cytoscape.webservice/.classpath
+org.openbel.cytoscape.webservice/.project
+org.openbel.cytoscape.webservice/bin/
+org.openbel.cytoscape.webservice/dist/
+org.openbel.cytoscape.navigator/.settings
+org.openbel.cytoscape.navigator/.classpath
+org.openbel.cytoscape.navigator/.project
+org.openbel.cytoscape.navigator/bin/
+org.openbel.cytoscape.navigator/dist/
+org.openbel.cytoscape.navigator/lib/
+org.openbel.cytoscape.webservice/nbproject/
+org.openbel.cytoscape.navigator/nb-build.xml
+org.openbel.cytoscape.navigator/nbproject/
+org.openbel.cytoscape.webservice/nb-build.xml
