--- a/org.openbel.cytoscape.navigator/build.xml
+++ b/org.openbel.cytoscape.navigator/build.xml
@@ -1,5 +1,5 @@
 <!--
-BEL Framework Webservice Plugin
+KAM Navigator Plugin
 
 URLs: http://openbel.org/
 Copyright (C) 2012, Selventa
@@ -17,25 +17,31 @@ GNU Lesser General Public License for more details.
 You should have received a copy of the GNU Lesser General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 -->
-<project name="belframework-webservice-plugin" default="deploy">
+<project name="kam-navigator-plugin" default="deploy">
+    <!--
+    Contains configuration for the specific build environment.
+    -->
 	<property file="../build.properties" />
 
-	<property name="license" value="COPYING" />
+    <property name="license" value="COPYING" />
     <property name="dist.path" value="dist" />
     <property name="src.path" value="src" />
+	<property name="lib.path" value="../org.openbel.cytoscape.webservice/dist/" />
     <property name="compile.path" value="bin" />
     <property name="jar.version" value="0.9-SNAPSHOT" />
-    <property name="jar.name"
-              value="belframework_webservice_${jar.version}.jar" />
+    <property name="jar.name" value="org.openbel.cytoscape.navigator-${jar.version}.jar" />
     <property name="src.jar.name"
-              value="belframework_webservice_source_${jar.version}.jar" />
+              value="org.openbel.cytoscape.navigator-source-${jar.version}.jar" />
     <property name="deploy.path"
               value="${CYTOSCAPE_HOME}/plugins/${jar.name}" />
     <property name="bel.jar.path" value="${BELFRAMEWORK_HOME}/lib/webapiclient/org.openbel.framework.ws.model-${BELFRAMEWORK_VERSION}.jar" />
 
     <path id="classpath">
+        <fileset dir="${lib.path}">
+            <include name="*.jar" />
+        </fileset>
+
         <pathelement location="${CYTOSCAPE_HOME}/cytoscape.jar" />
-        <pathelement location="${bel.jar.path}" />
     </path>
 
     <target name="clean">
@@ -74,7 +80,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
             <manifest>
                 <attribute name="Cytoscape-Plugin"
-                           value="org.openbel.cytoscape.webservice.ClientPlugin" />
+                           value="org.openbel.cytoscape.navigator.KAMNavigatorPlugin" />
             </manifest>
         	
             <!-- include license -->
