added kam association style back

--- a/org.openbel.cytoscape.navigator/resources/org/openbel/cytoscape/navigator/style.props
+++ b/org.openbel.cytoscape.navigator/resources/org/openbel/cytoscape/navigator/style.props
@@ -2279,3 +2279,115 @@ nodeWidthCalculator.KAM\ Visualization\ Data-Node\ Width-Discrete\ Mapper.mappin
 nodeWidthCalculator.KAM\ Visualization\ Data-Node\ Width-Discrete\ Mapper.mapping.map.transcriptionalActivity=110.0
 nodeWidthCalculator.KAM\ Visualization\ Data-Node\ Width-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeWidthCalculator.KAM\ Visualization\ Data-Node\ Width-Discrete\ Mapper.visualPropertyType=NODE_WIDTH
+edgeAppearanceCalculator.KAM\ Association.arrowColorMatchesEdge=true
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeColor=0,0,0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeFont=SanSerif,plain,10
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeFontSize=10.0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeLabel=
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeLabelColor=0,0,0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeLabelOpacity=255.0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeLabelPosition=C,C,c,0.00,0.00
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeLabelWidth=100.0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeLineStyle=SOLID
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeLineWidth=1.0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeOpacity=255.0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeSourceArrowColor=0,0,0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeSourceArrowOpacity=255.0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeSourceArrowShape=NONE
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeTargetArrowColor=0,0,0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeTargetArrowOpacity=255.0
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeTargetArrowShape=NONE
+edgeAppearanceCalculator.KAM\ Association.defaultEdgeToolTip=
+edgeAppearanceCalculator.KAM\ Association.edgeColorCalculator=KAM Association-Edge Color-Discrete Mapper
+edgeAppearanceCalculator.KAM\ Association.nodeSizeLocked=false
+edgeColorCalculator.KAM\ Association-Edge\ Color-Discrete\ Mapper.mapping.controller=KAM_MAPPED
+edgeColorCalculator.KAM\ Association-Edge\ Color-Discrete\ Mapper.mapping.controllerType=4
+edgeColorCalculator.KAM\ Association-Edge\ Color-Discrete\ Mapper.mapping.map.no=255,0,0
+edgeColorCalculator.KAM\ Association-Edge\ Color-Discrete\ Mapper.mapping.map.yes=0,0,0
+edgeColorCalculator.KAM\ Association-Edge\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
+edgeColorCalculator.KAM\ Association-Edge\ Color-Discrete\ Mapper.visualPropertyType=EDGE_COLOR
+globalAppearanceCalculator.KAM\ Association.defaultBackgroundColor=255,255,255
+globalAppearanceCalculator.KAM\ Association.defaultEdgeReverseSelectionColor=0,255,0
+globalAppearanceCalculator.KAM\ Association.defaultEdgeSelectionColor=255,0,0
+globalAppearanceCalculator.KAM\ Association.defaultNodeReverseSelectionColor=0,255,0
+globalAppearanceCalculator.KAM\ Association.defaultNodeSelectionColor=255,255,0
+nodeAppearanceCalculator.KAM\ Association.arrowColorMatchesEdge=true
+nodeAppearanceCalculator.KAM\ Association.defaultNodeBorderColor=0,0,0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeBorderOpacity=255.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics2=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics3=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics4=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics5=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics6=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics7=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics8=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphics9=cytoscape.visual.customgraphic.NullCustomGraphics
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition1=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition2=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition3=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition4=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition5=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition6=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition7=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition8=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeCustomGraphicsPosition9=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeFillColor=255,255,255
+nodeAppearanceCalculator.KAM\ Association.defaultNodeFont=Default,plain,12
+nodeAppearanceCalculator.KAM\ Association.defaultNodeFontSize=12.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeHight=30.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeLabel=
+nodeAppearanceCalculator.KAM\ Association.defaultNodeLabelColor=0,0,0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeLabelOpacity=255.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeLabelPosition=C,C,c,0.00,0.00
+nodeAppearanceCalculator.KAM\ Association.defaultNodeLabelWidth=100.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeLineStyle=SOLID
+nodeAppearanceCalculator.KAM\ Association.defaultNodeLineWidth=1.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeOpacity=255.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeShape=rect
+nodeAppearanceCalculator.KAM\ Association.defaultNodeShowNestedNetwork=true
+nodeAppearanceCalculator.KAM\ Association.defaultNodeSize=35.0
+nodeAppearanceCalculator.KAM\ Association.defaultNodeToolTip=
+nodeAppearanceCalculator.KAM\ Association.defaultNodeWidth=70.0
+nodeAppearanceCalculator.KAM\ Association.nodeFillColorCalculator=KAM Association-Node Color-Discrete Mapper
+nodeAppearanceCalculator.KAM\ Association.nodeLabelCalculator=KAM Node Label-clone-1357577314612
+nodeAppearanceCalculator.KAM\ Association.nodeSizeLocked=false
+nodeFillColorCalculator.KAM\ Association-Node\ Color-Discrete\ Mapper.mapping.controller=KAM_MAPPED
+nodeFillColorCalculator.KAM\ Association-Node\ Color-Discrete\ Mapper.mapping.controllerType=4
+nodeFillColorCalculator.KAM\ Association-Node\ Color-Discrete\ Mapper.mapping.map.no=255,0,0
+nodeFillColorCalculator.KAM\ Association-Node\ Color-Discrete\ Mapper.mapping.map.yes=255,255,255
+nodeFillColorCalculator.KAM\ Association-Node\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
+nodeFillColorCalculator.KAM\ Association-Node\ Color-Discrete\ Mapper.visualPropertyType=NODE_FILL_COLOR
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.controller=KAM_NODE_FUNCTION
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.controllerType=4
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.abundance=diamond
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.biologicalProcess=parallelogram
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.catalyticActivity=hexagon
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.complexAbundance=roundrect
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.kinaseActivity=hexagon
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.pathology=parallelogram
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.phosphataseActivity=hexagon
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.proteinAbundance=roundrect
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.rnaAbundance=ellipse
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.transcriptionalActivity=hexagon
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.map.translocation=rect
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.mapping.type=DiscreteMapping
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Discrete\ Mapper.visualPropertyType=NODE_SHAPE
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Passthrough\ Mapper.mapping.controller=KAM_MAPPED
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Passthrough\ Mapper.mapping.type=PassThroughMapping
+nodeShapeCalculator.KAM\ Association-Node\ Shape-Passthrough\ Mapper.visualPropertyType=NODE_SHAPE
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.controller=KAM_NODE_FUNCTION
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.controllerType=4
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.abundance=75.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.biologicalProcess=125.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.catalyticActivity=110.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.complexAbundance=150.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.kinaseActivity=110.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.pathology=125.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.phosphataseActivity=110.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.proteinAbundance=75.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.rnaAbundance=75.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.transcriptionalActivity=110.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.map.translocation=110.0
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.mapping.type=DiscreteMapping
+nodeUniformSizeCalculator.KAM\ Association-Node\ Size-Discrete\ Mapper.visualPropertyType=NODE_SIZE
