--- a/org.openbel.cytoscape.navigator/resources/org/openbel/cytoscape/navigator/plugin.props
+++ b/org.openbel.cytoscape.navigator/resources/org/openbel/cytoscape/navigator/plugin.props
@@ -17,7 +17,7 @@
 
 pluginName=KAMNavigator
 pluginDescription=KAM Navigator plugin for the BEL Framework.
-pluginVersion=0.9
+pluginVersion=#{OPENBEL_PLUGINS_VERSION}
 cytoscapeVersion=2.7,2.8
 pluginCategory=Communication/Scripting
 projectURL=http://www.openbel.org
